# pinazu

./: .air.toml  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  oapi-codegen.yaml  sonar-project.properties  sqlc.yaml
.github/: PYPI_PUBLISHING_GUIDE.md
.pipelines/: build-docker.yml  build-python.yml  unittest.yml
api/: base.yaml  generate_event.go
cli/: cli.go
cmd/: main.go
configs/: alloy-config.alloy  config.test.yaml  config.yaml
docs/: WORKFLOWS.md
e2e/: agents.spec.ts  flows.spec.ts  messages.spec.ts  nats-internal-tool-websocket-e2e.spec.ts  nats-multi-agents-websocket-e2e.spec.ts  nats-tools-websocket-e2e.spec.ts  nats-websocket-e2e.spec.ts  package-lock.json  package.json  permissions.spec.ts  playwright.config.ts  roles.spec.ts  setup.ts  structured-output.spec.ts  tasks.spec.ts  threads.spec.ts  tools.spec.ts  tsconfig.json  users.spec.ts  websocket.spec.ts
python/pinazu-py/: CLAUDE.local.md  README.md  conftest.py  pyproject.toml
python/pinazu-py/examples/agents/: invoke_agent_sse.py  structure_output.py
python/pinazu-py/examples/api/: create_role.py  create_tool.py
python/pinazu-py/examples/flows/: basic_flow.py  execute_flow.py
python/pinazu-py/src/pinazu/: models.py  runtime.py
python/pinazu-py/src/pinazu/api/: __init__.py  models_generated.py
python/pinazu-py/tests/: __init__.py  test_flows_api.py  test_tasks_api.py
scripts/: build-openapi.go  install-oapi-codegen.sh  install-sqlc.sh  test-all.sh  test_workflows.sh
web/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+279 files in other folders)
