[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinazu-py"
version = "0.6.2"
description = "Python Client to interact with Pinazu Server"
readme = "README.md"
authors = [
    { name = "Tran Quy An", email = "isphicks@gmail.com" },
    { name = "Tran Minh Thanh", email = "thanh.tran@techxcorp.com" },
    { name = "Vinh Khuat", email = "vinh.kq@techxcorp.com" },
    { name = "Nguyen Thai Thanh", email = "thanhnt@techxcorp.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
    "boto3>=1.26.0",
    "aiobotocore>=2.23.2",
    "types-aiobotocore[s3]>=2.23.2",
    "nats-py>=2.10.0",
    "pydantic>=2.11.0,<3.0.0",
    "pendulum>=3.0.0,<4.0.0",
    "orjson>=3.8.0",
    "python-json-logger>=3.3.0",
    "httpx>=0.28.1",
    "httpx-ws>=0.7.2",
    "pytest-asyncio>=1.1.0",
    "minio>=7.2.16",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "tox>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0"
]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "tox>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]
